payment and rental